[package]
name = "ds-from-scratch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
plotters = "^0.3.1"
curl = "0.4.41"
csv = "1.1"
serde = { version = "1.0.131", features = ["derive"] }
rustlearn = "^0.4.3"